<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:id="@+id/layout_lv_peminjaman"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingVertical="5dp">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/nomor_peminjaman"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/kode_peminjaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/kode_peminjaman"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tgl_peminjaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/ic_arrow"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/tgl_peminjaman"
        android:textSize="9sp" />

    <TextView
        android:id="@+id/durasi_tersisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@+id/menit_tersisa"
        android:fontFamily="@font/montserrat_light"
        android:gravity="right"
        android:text="@string/sisa_durasi"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/menit_tersisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/ic_arrow"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/menit_tersisa"
        android:textSize="10sp" />

    <ImageView
        android:id="@+id/ic_arrow"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

</RelativeLayout>