<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_sukses"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/judul_notif"
        android:textSize="22sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/judul_notif"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isi_notif"
        android:textSize="13sp"
        android:fontFamily="@font/montserrat_light"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/isi_notif"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hasi_notif"
        android:textSize="22sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/colorAccent"
        android:text="@string/hasil_notif"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_selesai"
        android:background="@drawable/bg_button_biru"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="SELESAI"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>