<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/toolbar_pinjam_barang"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_clear_white_24dp"
            android:background="@color/colorPrimary"
            android:onClick="cancel"/>
        <TextView
            android:id="@+id/kode_peminjaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/kode_peminjaman" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tgl_peminjaman"
        android:fontFamily="@font/montserrat_light"
        android:textSize="9sp"
        android:text="@string/tgl_peminjaman"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="15sp"
        android:text="@string/barang_yang_dipinjam"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>
    <ListView
        android:id="@+id/lv_detail_pinjaman"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

    </ListView>




</LinearLayout>