<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/cardview_kelas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginHorizontal="@dimen/cardview_horizontal_margin"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingHorizontal="@dimen/cardview_horizontal_padding"
            android:paddingVertical="@dimen/cardview_vertical_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nama_kelas"
                android:text="@string/nama_kelas"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lokasi_kelas"
                android:text="Gedung AA"
                android:textSize="10sp"
                android:fontFamily="@font/montserrat_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="14dp"
                    android:src="@drawable/ic_person_orange"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/kapasitas_kelas"
                    android:text="@string/kapasitas_kelas"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orang"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>