<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar_pinjam_barang"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_white"
            android:background="@color/colorPrimary"
            android:onClick="backtoHome"/>
        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/pinjam_barang" />
    </RelativeLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:id="@+id/list_pinjam"
        android:background="@drawable/bg_set_pinjam"
        android:padding="10dp">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="85dp"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_set_pinjam">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mulai"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_semi_bold" />

            <EditText
                android:id="@+id/time_mulai"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/enter_time"
                android:textSize="14sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="85dp"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_set_pinjam">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selesai"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_semi_bold" />
            <EditText
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/time_selesai"
                android:ems="10"
                android:hint="@string/enter_time"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_pinjam_barang"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_biru"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/pinjam_barang"
        android:textColor="#fff"
        android:textSize="15sp" />

</LinearLayout>