<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar_pinjam_barang"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_clear_white_24dp"
            android:background="@color/colorPrimary"
            android:onClick="cancel"/>
        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/buat_laporan" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="15sp"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:id="@+id/deskripsi_laporan"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_gambar"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_marginTop="10dp"
        android:background="#C8C7C7"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/cardview_horizontal_padding"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/foto_kerusakan"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_image_blue_24dp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/btn_lapor"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_button_biru"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/lapor"
            android:textColor="#fff"
            android:textSize="15sp" />

    </RelativeLayout>


</LinearLayout>